# aocaml

./: .gitignore  Makefile  README.md  aoc.opam  dune-workspace
1/: part_one.ml  part_two.ml
2/: part_one.ml  part_two.ml
3/: dune  part_one.ml  part_two.ml
4/: dune  part_one.ml  part_two.ml
5/: main.ml
generators/: D9.py  dune
lib/: aoc.ml  aoc.mli  bench.ml  bench.mli  c.ml  c.mli  dune  eztls.ml  eztls.mli  fetch.ml  fetch.mli  misc.ml  misc.mli  storage.ml  storage.mli
solutions/: D1.ml  D10.ml  D11.ml  D13.ml  D15.ml  D18.ml  D19.ml  D3.ml  D5.ml  D6.ml  D7.ml  D7_lexer.mll  D9.ml  dune  main.ml
solutions/2020/: D.ml  D11.ml  D12.ml  D13.ml  D14.ml  D15.ml  D16.ml  D17.ml  D18.ml  D19.ml  D2.ml  D3.ml  D4.ml  D5.ml  D6.ml  D7.ml  D7_parser.mly  D8.ml  D9.ml  dune  main.ml
solutions/2021/: D.ml  D1.ml  dune  main.ml
solutions/2022/: D.ml  D1.ml  D10.ml  D11.ml  D12.ml  D13.ml  D14.ml  D15.ml  D16.ml  D17.ml  D18.ml  D19.ml  D2.ml  D20.ml  D21.ml  D22.ml  D23.ml  D24.ml  D25.ml  D3.ml  D4.ml  D5.ml  D6.ml  D7.ml  D8.ml  D9.ml  dune  main.ml
