opam-version: "2.0"
name: "aoc"
version: "0.1"
synopsis: "Advent of code helper and solutions"
description: """"""
maintainer: "Lucas Pluvinage <lucas.pluvinage@gmail.com>"
authors: "Lucas Pluvinage <lucas.pluvinage@gmail.com>"
license: "MT"
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [
  "ocaml"
  "uuseg"
  "dune"
  "fmt"
  "bos"
  "fpath"
  "cohttp"
  "cohttp-eio" {< "6.0.0~alpha1"}
  "tls-eio"
  "uri"
  "mirage-crypto-rng-eio"
  "eio"
  "eio_main"
  "logs"
  "mtime" {< "2.0.0"}
]
build: []
install: []
